# robotec_ws

./: .gitignore  README.md  README_GAZEBO.md  map_2.pgm  map_2.yaml  map_slam_rc2025.pgm  map_slam_rc2025.yaml  map_tec_2.pgm  map_tec_2.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/: Plot Log-RTAB.ipynb
src/known_locations_tf_server/: package.xml  setup.cfg  setup.py
src/known_locations_tf_server/known_locations_tf_server/: known_locations_server.py
src/robot_movement/: package.xml  setup.py
src/robot_movement/robot_movement/: line_detector.py  pid_yaw.py  pot_fields.py
src/robotino_audio/robotino_audio/: package.xml  setup.cfg  setup.py
src/robotino_audio/robotino_tts/: package.xml  setup.cfg  setup.py
src/robotino_bts/: package.xml  setup.cfg  setup.py
src/robotino_bts/launch/: bt_task.launch.py
src/robotino_bts/robotino_bts/: task_manager.py
src/robotino_interfaces/: CMakeLists.txt  package.xml
src/robotino_interfaces/srv/: FaceRecog.srv  PoseDetect.srv  SetGrammar.srv  Talk.srv  YoloDetect.srv
src/robotino_webots/: CMakeLists.txt  package.xml
src/robotino_webots/config/: cyclonedds_many_nodes.xml  handheld_slam_config.yaml  nav2_robotino_gz.yaml  nav2_robotino_webots.yaml  nav2_robotino_webots_pure_pursuit.yaml  nav2_taktecfesto_gz.yaml  nav2_taktecfesto_gz_pure_pursuit.yaml  robotino_xarm_moveit.rviz  slam_toolbox.yaml  teleop_joy_robotino.yaml
src/robotino_webots/controllers/abb_ik_webots/: abb_ik_webots.py
src/robotino_webots/env-hooks/: robotino_cyclonedds.dsv.in
src/robotino_webots/launch/: abb_arm_launch.py  handheld_tf.launch.py  nav_robotino.launch.py  nav_robotino_gz.launch.py  real_robo_localization.launch.py  real_robo_nav2.launch.py  real_robotino.launch.py  real_robotino_slam.launch.py  robotino.launch.py  robotino_gz_full.launch.py  robotino_gz_xarm.launch.py  robotino_gz_xarm_rc2025.launch.py  robotino_launch.launch.py  robotino_min.launch.py  robotino_min_rtabmap.launch.py  robotino_min_rtabmap_rgbd.launch.py  robotino_min_rtabmap_rgbd_compare.launch.py  robotino_xarm_moveit_common.launch.py  sim_teleop_joy.launch.py  sim_teleop_joy.py  slam_mapping.launch.py  vision.launch.py
src/robotino_webots/src/: abb_fake_driver.py  kinect_camera_info_publisher.py  loger.py  robotino_webots_controller.py
src/robotino_webots/urdf/: Robotino3.urdf  abb_arm.urdf
src/robotino_webots/worlds/: ABB_inverse_kinematics.wbt  robotino3.wbt  robotino_apartment.wbt  robotino_ros2.wbt  robotino_ros2_lidar.wbt
src/vision/: Point cloud images.ipynb  package.xml  readme.md  setup.cfg  setup.py
src/vision/config/: readme.md
src/vision/launch/: vision_image.launch.py
src/vision/vision/: face_recog_service_node.py  kinect_pointcloud_node.py  plane_detector_node.py  pose_service_node.py  vision_node.py  vision_node_cam.py  (+4 more)
worlds/: empty_min.sdf  empty_sensors.sdf  lidar_ok.sdf  lidar_ok.sdf.bak
(+316 files in other folders)
