<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>known_locations_tf_server</name>
  <version>0.0.0</version>
  <description>ROS2 service for managing known locations with TF broadcasting</description>
  <maintainer email="ofc1227@tec.mx">You</maintainer>
  <license>Apache-2.0</license>

  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>tf2_ros_py</depend>
  <depend>geometry_msgs</depend>
  <depend>robotino_interfaces</depend>
  
  <!-- FOR SERVICE GENERATION - THESE ARE ESSENTIAL -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- For YAML support -->
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>